--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # MongoDB
-MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://onlymatt43_db_user:8fWTVP5X5xhD5mkj@supervideouser.5vvef1m.mongodb.net/?appName=supervideouser
 MONGODB_DB=connect
 MONGODB_COLL=subscribers
 
